# Multi-Agent-Custom-Automation-Engine-Solution-Accelerator

./: .aicfg  .coveragerc  .env.example  .flake8  .gitignore  .inspector.log.prev  .yamllint.yml  AI_FOUNDRY_README.md  DEPLOY_BACKEND_GUIDE.md  FIBROSKIN_GAP_ANALYSIS.md  INTEGRATION_README.md  Multi-Agent-Custom-Automation-Engine-Solution-Accelerator.code-workspace  PHASE1_STATUS.md  QUICK_START_LOCAL.md  README.md  agents.context.json  azure.yaml  azure_env_variables.txt  azure_ml_report.txt  conftest.py  fix_permissions.sh  install-agent975.sh  mcp-inspector-config.json  ml_workspace_config.json  package-lock.json  package.json  pyrightconfig.json  pytest.ini  run-agent975.mjs  run-agent975.sh  simple-ai-foundry-integration.ps1  test-agent975.ps1  test-foundry-connection.ps1  test_executable.sh
src/backend/: .env.sample  Dockerfile  EXAMPLE_TOOL_WITH_CREDENTIALS.py  VALIDATOR_INTEGRATION_EXAMPLE.py  app.py  app_config.py  app_kernel.py  credential_resolver.py  delete_tech_agent.py  pyproject.toml  requirements.txt  test_observability.py  test_strategic_orchestrator.py  tool_registry.py  utils_date.py  utils_kernel.py  validate_observability.py
src/backend/adapters/: aws_adapter.py  base_adapter.py  firestore_adapter.py  salesforce_adapter.py
src/backend/auth/: auth_utils.py
src/backend/azure_functions/: .funcignore  host.json  local.settings.json
src/backend/connectors/: __init__.py  base.py  calendar_connector.py  database_connector.py  graph_connector.py  smtp_connector.py
src/backend/context/: cosmos_memory_kernel.py
src/backend/tests/: conftest.py  (+12 more)
src/frontend/: .eslintrc.cjs  .gitignore  Dockerfile  frontend_server.py  package-lock.json  package.json  pyproject.toml  vite.config.ts  vitest.config.ts
(+251 files in other folders)
